--- a/src/app/assistance-listing/components/account-identification.template.html
+++ b/src/app/assistance-listing/components/account-identification.template.html
@@ -29,12 +29,16 @@
             <td>
               <!--todo: handle this with css classes?-->
               <ng-container *ngIf="currentIndex === model.accounts.length && !showForm">
-                <a (click)="editAccount(i)">Edit</a>
-                <a (click)="removeAccount(i)">Delete</a>
+                <a class="fal-table-edit" (click)="editAccount(i)">Edit</a>
+                <i class="fa fa-pencil fal-table-edit" aria-hidden="true" (click)="editAccount(i)"></i>
+                <a class="fal-table-delete" (click)="removeAccount(i)">Delete</a>
+                <i class="fa fa-trash fal-table-delete" aria-hidden="true" (click)="removeAccount(i)"></i>
               </ng-container>
               <ng-container *ngIf="currentIndex < model.accounts.length || showForm">
-                <s>Edit</s>
-                <s>Delete</s>
+                <s class="fal-table-edit">Edit</s>
+                <s class="fa fa-pencil fal-table-edit" aria-hidden="true"></s>
+                <s class="fal-table-delete">Delete</s>
+                <s class="fa fa-trash fal-table-delete" aria-hidden="true"></s>
               </ng-container>
             </td>
           </tr>
