[SAM-7148] Change button text to match wireframes

--- a/src/app/assistance-listing/components/account-identification.template.html
+++ b/src/app/assistance-listing/components/account-identification.template.html
@@ -78,7 +78,7 @@
       ></samTextArea>
     </div>
 
-    <samButton *ngIf="!showForm" buttonText="Add Account" (onClick)="displayForm()" [buttonType]="'default'"></samButton>
+    <samButton *ngIf="!showForm" buttonText="Add New Account" (onClick)="displayForm()" [buttonType]="'default'"></samButton>
     <samButton *ngIf="showForm" buttonText="Cancel" (onClick)="resetForm()" [buttonType]="'default'"></samButton>
     <samButton *ngIf="showForm" buttonText="Confirm" (onClick)="addAccount()" [buttonType]="(!codeFormGroup.valid ? 'disabled' : 'default')"></samButton>
   </form>
