Edit Contact Dropdown issue fix

--- a/src/app/assistance-listing/assistance-listing-operations/sections/contact-information/contact-information.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/contact-information/contact-information.template.html
@@ -37,6 +37,7 @@
           [name]="'contact-control'"
           [required]="true"
           [options]="contactDrpDwnOptions"
+          [disabled]="(mode == 'Edit' ? true : false)"
           formControlName="contactId"
           (modelChange)="onParamChanged($event)"></samSelect>
 
