--- a/src/app/assistance-listing/assistance-listing-operations/sections/header-information/header-information.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/header-information/header-information.template.html
@@ -32,8 +32,8 @@
   <div>
     <div class="pull-left">
       <samButton buttonText="Cancel" (onClick)="onCancelClick($event)"></samButton>
-      <samButton [buttonType]="(!falHeaderInfoForm.valid ? 'disabled' : 'default')" buttonText="Save and Exit" (onClick)="onSaveExitClick($event)"></samButton>
-      <samButton [buttonType]="(!falHeaderInfoForm.valid ? 'disabled' : 'default')" buttonText="Save and Continue" (onClick)="onSaveContinueClick($event)"></samButton>
+      <samButton buttonText="Save and Exit" (onClick)="onSaveExitClick($event)"></samButton>
+      <samButton buttonText="Save and Continue" (onClick)="onSaveContinueClick($event)"></samButton>
     </div>
   </div>
 </form>
