--- a/src/app/assistance-listing/assistance-listing-operations/sections/overview/overview.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/overview/overview.template.html
@@ -18,8 +18,8 @@
     <div class="pull-left">
       <samButton buttonText="Cancel" (onClick)="onCancelClick($event)"></samButton>
       <samButton buttonText="Previous" (onClick)="onPreviousClick($event)"></samButton>
-      <samButton [buttonType]="(!falOverviewForm.valid ? 'disabled' : 'default')" buttonText="Save and Exit" (onClick)="onSaveExitClick($event)"></samButton>
-      <samButton [buttonType]="(!falOverviewForm.valid ? 'disabled' : 'default')" buttonText="Save and Continue" (onClick)="onSaveContinueClick($event)"></samButton>
+      <samButton buttonText="Save and Exit" (onClick)="onSaveExitClick($event)"></samButton>
+      <samButton buttonText="Save and Continue" (onClick)="onSaveContinueClick($event)"></samButton>
     </div>
   </div>
 </form>
