--- a/src/app/assistance-listing/components/tafs.template.html
+++ b/src/app/assistance-listing/components/tafs.template.html
@@ -106,7 +106,7 @@
 
     <samButton *ngIf="!showForm" buttonText="Add New TAF" (onClick)="displayForm()" [buttonType]="'default'"></samButton>
     <samButton *ngIf="showForm" buttonText="Cancel" (onClick)="resetForm()" [buttonType]="'default'"></samButton>
-    <samButton *ngIf="showForm" buttonText="Confirm" (onClick)="addTafs()" [buttonType]="(!tafsFormGroup.valid ? 'disabled' : 'default')"></samButton>
+    <samButton *ngIf="showForm" buttonText="Confirm TAF" (onClick)="addTafs()" [buttonType]="(!tafsFormGroup.valid ? 'disabled' : 'default')"></samButton>
   </form>
 
 </labelWrapper>
