--- a/src/app/assistance-listing/assistance-listing-operations/sections/contact-information/contact-information-table.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/contact-information/contact-information-table.template.html
@@ -21,10 +21,10 @@
       </ng-container>
 
       <ng-container *ngIf="!hideContactsForm">
-        <s class="fal-table-edit">Edit</s>
-        <s class="fa fa-pencil fal-table-edit" aria-hidden="true"></s>
-        <s class="fal-table-delete">Remove</s>
-        <s class="fa fa-trash fal-table-delete" aria-hidden="true"></s>
+        <span class="fal-table-edit disabled">Edit</span>
+        <i class="fa fa-pencil fal-table-edit disabled" aria-hidden="true"></i>
+        <span class="fal-table-delete disabled">Remove</span>
+        <i class="fa fa-trash fal-table-delete disabled" aria-hidden="true"></i>
       </ng-container>
 
     </td>
