Make FAL No Required

--- a/src/app/assistance-listing/assistance-listing-operations/sections/header-information/header-information.template.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/header-information/header-information.template.html
@@ -15,6 +15,7 @@
 
   <samNumber [maxlength]="3"
              [minlength]="3"
+             [required]="true"
              [hint]="'Provide a unique three digit program number (for example, enter 244 for CFDA number 10.244)'"
              [control]="falHeaderInfoForm.controls['programNumber']"
              [name]="'programNumber-input'"
