- Add session verification timer function (not initialized) - Fix system password create request - Added password component reset method

--- a/src/app/authentication/system/password/system-password.component.html
+++ b/src/app/authentication/system/password/system-password.component.html
@@ -8,14 +8,12 @@
                     #password></sam-password>
       <div class="usa-button-controls">
         <button type="submit" [disabled]="states.loading">Submit</button>
+        <samAlert class="usa-alert-static"
+                  [type]="states.alert.type"
+                  [title]="states.alert.message"
+                  [hidden]="!states.alert.show"
+                  showClose="true"></samAlert>
       </div>
     </div>
-    <samAlert [type]="states.alert.type"
-              [title]="states.alert.message"
-              [hidden]="!states.alert.show"
-              [target]="formControl"
-              [offset]="{ left: 40, top: -30 }"
-              placement="bottom center"
-              showClose="true"></samAlert>
   </form>
 </div>
