defect fix for email validation

--- a/src/app/app-components/feedback-form/feedback-form.template.html
+++ b/src/app/app-components/feedback-form/feedback-form.template.html
@@ -51,10 +51,10 @@
         </div>
         <div class="usa-width-one-whole">
           <div class="usa-width-two-thirds m_R-0 text-align-center">
-            <div [ngClass]="{'usa-input-error':isEmailError()}">
-                <span class="usa-input-error-message" *ngIf="!isEmailError()">&nbsp;</span>
-                <span class="usa-input-error-message" *ngIf="isEmailError()">Enter a valid email address</span>
-                <input aria-describedby="input-error-message" type="email" id="email" name="email" [formControl]="email" class="usa-width-one-whole m_L-3x feedback-email-input" *ngIf="emailRadioBtnValue == 'Yes'" placeholder="Please provide your email" [(ngModel)]="userEmailModel" (change)="onEmailTextChange()">
+            <div [ngClass]="{'usa-input-error':showEmailError}">
+                <span class="usa-input-error-message" *ngIf="!showEmailError">&nbsp;</span>
+                <span class="usa-input-error-message" *ngIf="showEmailError">Enter a valid email address</span>
+                <input aria-describedby="input-error-message" type="email" id="email" name="email" [formControl]="email" class="usa-width-one-whole m_L-3x feedback-email-input" *ngIf="emailRadioBtnValue == 'Yes'" placeholder="Please provide your email" [(ngModel)]="userEmailModel" (change)="onEmailTextChange()" (keypress)="onEmailEnter($event)">
             </div>
 
             <h3>&nbsp;</h3>
