--- a/src/styles/components/_feedback-form.scss
+++ b/src/styles/components/_feedback-form.scss
@@ -83,7 +83,7 @@ body.feedback-open {
     margin-right: 0;
   }
 
-  .feedback-icon-div:hover, .hide-form-icon:hover, .thumb:hover, .fa-times-circle-o:hover{
+  .feedback-icon-div:hover, .hide-form-icon:hover, .thumb:hover, .fa-times-circle-o:hover, .feedback-form-link:hover{
     cursor: pointer;
   }
 
