Hide features without content in awards data page

--- a/src/app/Help/sections/award-data/award-data.template.html
+++ b/src/app/Help/sections/award-data/award-data.template.html
@@ -16,7 +16,7 @@
               <span>{{curConfig.legacyWebsiteContent}}</span>
             </div>
           </div>
-          <div class="usa-width-one-whole p_L-4x m_B-2x m_T-2x relative">
+          <div class="usa-width-one-whole p_L-4x m_B-2x m_T-2x relative" *ngIf="this.curFeatures.length !== 0">
             <h3>
               <span>
                 Features
